test/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-ci-test
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
        - name: test-app
          image: flrhyme9/go-ci-test:1.0.0
          ports:
            - containerPort: 8080
