test/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - go-test.k8s.bumgu.com
      secretName: k8s-bumgu-com-tls
  rules:
    - host: go-test.k8s.bumgu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-svc
                port:
                  number: 8080
