test/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-svc
  namespace: test
spec:
  selector:
    app: test-app
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
